test/error/sys-func/test-write-invalid-type/p.pas
program test_write_invalid_type;
var i: array [1..2, 1..2, 1..2] of integer;
begin
    write(i);
end.
